11 Jun 2003 mipsator
 * added srcdir in gdata structure.
 * modified hash_append() to avoid adding separator to an empty string.
 * added init of CFLAGS and LIBS.
 * empty binary path in pmk_check_binary() when not found this avoiding
	remaining tags after parsing.

# snapshot 0.4.4

10 Jun 2003 mipsator
 * updated TODO
 * modified behavior of pmk_check_binary().
 * added support for alternative CFLAGS and CLIBS in pmk_check_config()
	and pmk_check_pkg_config().
 * updated pmkfile and makefile samples to use new features.
 * fixed pmk_check_config() and pmk_check_pkg_config() to avoid display
 	of error messages.
 * updated TODO and STATUS

08 Jun 2003 mipsator
 * added support for pkg-config with CHECK_PKG_CONFIG.
 	(added pmk_check_pkg_configi() in func)
 * made version optional in CHECK_CONFIG.
 * updated pmkfile sample.
 * added version checking in pmk_check_pkg_config().
 * added a check to ensure that the given package exists.
 * use PACKAGE instead of TARGET in CHECK_CONFIG.

07 Jun 2003 mipsator
 * cleaned-up and reorganized includes.
 * added autoconf.c and autoconf.h for autoconf compatibility stuff.

05 Jun 2003 mipsator
 * massive changes in func.c to complete check functions.
 	(added missing record_def, record_val and label_set
		and moved some portions of code)

04 Jun 2003 mipsator
 * makes pmkcfg.sh using the same tags as pmk (@DEF__*).
 * updates compat/compat.h.in to use DEF__* tags.

03 Jun 2003 mipsator
 * updated makefile sample to use LIBS and CFLAGS.
 * added CFLAGS and LIBS support in pmk_check_config().
 * added LIBS support in pmk_check_lib().
 * fixed initialisation of the buffer in hash_append().

02 Jun 2003 mipsator
 * improved hash_append().
 * updated hash_test.c to test appending function.

01 Jun 2003 mipsator
 * added hash_append().

31 May 2003 mipsator
 * added strlcat.c and strlcat.h in compat directory.
 * pmkcfg.sh now have a check for strlcat.
 * fully included strlcat in compat.