@@ -4,6 +4,7 @@
  * added init of CFLAGS and LIBS.
  * empty binary path in pmk_check_binary() when not found this avoiding
 	remaining tags after parsing.
+ * added code to set srcdir and basedir.
 
 # snapshot 0.4.4
 
